Add UTF-8 charset meta

--- a/tortransit.html
+++ b/tortransit.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Union Station GO transit</title>
+  <meta charset="utf-8">
   <script defer>
     const GO_URL = "https://api.gotransit.com/Api/schedules/stops/UN/departures?Page=1&PageLimit=10";
     async function populateDepartures() {
